<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tt"
    tools:context=".content">

    <TextView
        android:id="@+id/isiconten"
        android:layout_width="341dp"
        android:layout_height="349dp"
        android:text="@string/isi_conten"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/syntaxb2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="38dp" />

    <Button
        android:id="@+id/backc"
        android:layout_width="150dp"
        android:layout_height="81dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#3D6432"
        android:text="@string/back_c"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linkc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linkc" />

    <Button
        android:id="@+id/linkc"
        android:layout_width="150dp"
        android:layout_height="81dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#3D6432"
        android:text="@string/link_c"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/syntaxb2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/syntaxb2"
        app:layout_constraintTop_toBottomOf="@+id/syntaxb2" />

    <Button
        android:id="@+id/syntaxb2"
        android:layout_width="150dp"
        android:layout_height="81dp"
        android:backgroundTint="#3D6432"
        android:text="@string/syntax_c"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/isiconten"
        app:layout_constraintStart_toStartOf="@+id/isiconten"
        tools:layout_editor_absoluteY="417dp" />
</androidx.constraintlayout.widget.ConstraintLayout>