<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tt">

    <Button
        android:id="@+id/syntaxs"
        android:layout_width="150dp"
        android:layout_height="81dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#3D6432"
        android:text="@string/syntax_a"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/links"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <Button
        android:id="@+id/links"
        android:layout_width="150dp"
        android:layout_height="81dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#3D6432"
        android:text="@string/link_a"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/backs"
        app:layout_constraintEnd_toEndOf="@+id/syntaxs"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/syntaxs" />

    <Button
        android:id="@+id/backs"
        android:layout_width="150dp"
        android:layout_height="81dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#3D6432"
        android:text="@string/back_a"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/links"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/links" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="339dp"
        android:layout_height="205dp"
        android:text="@string/isi_activity"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/syntaxs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>